<resources>
    <string name="app_name">Linlus_PG</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="nav_text_1">Dashboard</string>
    <string name="nav_text_2">Services</string>
    <string name="nav_text_3">Calendar</string>
    <string name="nav_text_4">Personal</string>
    <string name="application_name">Linslus</string>
    <string name="example_content">Example Content</string>
    <string name="image">image</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_username">Type your username</string>
    <string name="enter_password">Type your password</string>
    <string name="enter_confirm_password">Type confirm password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forget_password"><u>Forget password?</u></string>
    <string name="remember_me">Remember me</string>
    <string name="or_login_with">- or login with -</string>
    <string name="no_account">No account yet?</string>
    <string name="create_one"><u>Create one</u></string>
    <string name="already_account">Already have an account?</string>
    <string name="login_with_us"><u>Login with us</u></string>
    <string name="forgot_password">Forget password</string>
    <string name="type_email">Type your email</string>
    <string name="send">Send</string>
    <string name="email_instruction">No worries! Enter your email and we will send you a reset.</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="address">D:\WORKPLACE\AndroidStudioRepo\HCI_ASM_HUHU\PGbooking\app\src\main\res\layout</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="booker_name">Robert Patricia</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cancel_reason">Reason</string>
    <string name="start_time">Starting time:</string>
    <string name="end_time">Ending time:</string>
    <string name="receivable">Receivable:</string>
    <string-array name="unit_options">
        <item>Hour</item>
        <item>Clip</item>
        <item>Album</item>
        <item>Picture</item>
    </string-array>
</resources>