<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/nav_text_1"/>
    <item
        android:id="@+id/page_services"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_photo_library_24"
        android:title="@string/nav_text_2"/>
    <item
        android:id="@+id/page_calendar"
        android:enabled="true"
        android:icon="@drawable/ic_books_24"
        android:title="@string/nav_text_3"/>
    <item
        android:id="@+id/page_settings"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/nav_text_4"/>
</menu>