<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".authentication.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginVertical="15dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="40dp"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="5dp"
            android:autofillHints="username"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_username"
            android:inputType="textPersonName"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="40dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="5dp"
            android:autofillHints="email"
            android:background="@drawable/edit_text_background"
            android:hint="@string/type_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="40dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="5dp"
            android:autofillHints="password"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="40dp"/>

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="5dp"
            android:autofillHints="confirm password"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_confirm_password"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_button"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_account"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_with_us"
                android:textSize="16sp"
                android:paddingBottom="3dp"
                android:textColor="@color/pink"
                android:paddingHorizontal="5dp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>