<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".authentication.SignInActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/log_in"
            android:textColor="@color/blue"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvInvalid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="5dp"
            android:paddingHorizontal="20dp"
            android:text="@string/example_content"
            android:textColor="@color/red"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:paddingHorizontal="10dp"
            android:text="@string/username" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="5dp"
            android:autofillHints="username"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_username"
            android:inputType="textPersonName"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="10dp"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="5dp"
            android:autofillHints="username"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/forget_password"
            android:textAlignment="viewEnd"
            android:textColor="@color/pink" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_button"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="20dp"
            android:paddingHorizontal="10dp"
            android:text="@string/or_login_with"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="25dp"
                android:contentDescription="@string/image"
                app:srcCompat="@drawable/facebook" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginHorizontal="25dp"
                android:contentDescription="@string/image"
                app:srcCompat="@drawable/google" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:paddingBottom="3dp"
                android:text="@string/create_one"
                android:textColor="@color/pink"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>